Cache deep property hierarchy

--- a/tests/dozer-jmh-tests/pom.xml
+++ b/tests/dozer-jmh-tests/pom.xml
@@ -45,6 +45,20 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- JAXB -->
+        <dependency>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.jaxb-impl</artifactId>
+            <version>2.2.11_1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.servicemix.specs</groupId>
+            <artifactId>org.apache.servicemix.specs.jaxb-api-2.2</artifactId>
+            <version>2.9.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- JMH -->
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
